grama/ParInstant.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module ParInstant where
import qualified AbsInstant
import LexInstant
}

%name pProgram Program
%name pStmt Stmt
%name pListStmt ListStmt
%name pExp1 Exp1
%name pExp2 Exp2
%name pExp3 Exp3
%name pExp4 Exp4
%name pExp Exp
-- no lexer declaration
%monad { Either String } { (>>=) } { return }
%tokentype {Token}
%token
  '(' { PT _ (TS _ 1) }
  ')' { PT _ (TS _ 2) }
  '*' { PT _ (TS _ 3) }
  '+' { PT _ (TS _ 4) }
  '-' { PT _ (TS _ 5) }
  '/' { PT _ (TS _ 6) }
  ';' { PT _ (TS _ 7) }
  '=' { PT _ (TS _ 8) }
  L_Ident  { PT _ (TV $$) }
  L_integ  { PT _ (TI $$) }

%%

Ident :: { AbsInstant.Ident}
Ident  : L_Ident { AbsInstant.Ident $1 }

Integer :: { Integer }
Integer  : L_integ  { (read ($1)) :: Integer }

Program :: { AbsInstant.Program }
Program : ListStmt { AbsInstant.Prog $1 }

Stmt :: { AbsInstant.Stmt }
Stmt : Ident '=' Exp { AbsInstant.SAss $1 $3 }
     | Exp { AbsInstant.SExp $1 }

ListStmt :: { [AbsInstant.Stmt] }
ListStmt : {- empty -} { [] }
         | Stmt { (:[]) $1 }
         | Stmt ';' ListStmt { (:) $1 $3 }

Exp1 :: { AbsInstant.Exp }
Exp1 : Exp2 '+' Exp1 { AbsInstant.ExpAdd $1 $3 } | Exp2 { $1 }

Exp2 :: { AbsInstant.Exp }
Exp2 : Exp2 '-' Exp3 { AbsInstant.ExpSub $1 $3 } | Exp3 { $1 }

Exp3 :: { AbsInstant.Exp }
Exp3 : Exp3 '*' Exp4 { AbsInstant.ExpMul $1 $3 }
     | Exp3 '/' Exp4 { AbsInstant.ExpDiv $1 $3 }
     | Exp4 { $1 }

Exp4 :: { AbsInstant.Exp }
Exp4 : Integer { AbsInstant.ExpLit $1 }
     | Ident { AbsInstant.ExpVar $1 }
     | '(' Exp ')' { $2 }

Exp :: { AbsInstant.Exp }
Exp : Exp1 { $1 }
{

happyError :: [Token] -> Either String a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer = tokens
}
